<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <Spinner
            android:id="@+id/employment_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/worked_date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/worked_date_hint"
            android:inputType="text" />

        <RadioGroup
            android:id="@+id/session_type_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/full_session_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/full_session" />

            <RadioButton
                android:id="@+id/half_session_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/half_session" />

            <RadioButton
                android:id="@+id/custom_session_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/custom_session" />
        </RadioGroup>

        <EditText
            android:id="@+id/amount_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:hint="@string/custom_amount_hint"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/note_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_hint"
            android:inputType="textCapSentences|textMultiLine" />
    </LinearLayout>
</ScrollView>