<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <Spinner
        android:id="@+id/payment_session_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/payment_date_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/payment_date_hint"
        android:inputType="text" />

    <EditText
        android:id="@+id/payment_amount_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/payment_amount_hint"
        android:inputType="numberDecimal" />

    <EditText
        android:id="@+id/payment_note_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/note_hint"
        android:inputType="textCapSentences|textMultiLine" />
</LinearLayout>