<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/grouped_payment_instruction" />

        <LinearLayout
            android:id="@+id/grouped_allocation_rows"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <EditText
            android:id="@+id/grouped_payment_date_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/payment_date_hint"
            android:inputType="text" />

        <EditText
            android:id="@+id/grouped_payment_note_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_hint"
            android:inputType="textCapSentences|textMultiLine" />
    </LinearLayout>
</ScrollView>